changed getting only not deleted items